# Ouroboros_App

./: .gitignore  CONTEXT.md  README.md  pyproject.toml
contracts/: bronze_lu_account_condition_alm.yaml  dim_customer.yaml  silver_lu_cash_flow_security_trade.yaml  silver_lu_hc_sector_grp.yaml  silver_lu_hist_commitment.yaml  silver_lu_lgd_product.yaml  silver_lu_projection.yaml  silver_ods_account.yaml  silver_ods_cash_flow.yaml  silver_ods_customer.yaml  silver_ods_loans_and_deposits.yaml  silver_ods_sector.yaml
contracts/suites/: daily_critical.yaml  full.yaml  smoke.yaml
notebooks/: data_quality_runner.ipynb  suite_runner.ipynb
rayfin-dq-app/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  rayfin.config.ts  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
rayfin-dq-app/rayfin/: .deployments.json  rayfin.yml  tsconfig.json
rayfin-dq-app/rayfin/data/: QuarantineEdit.ts  QuarantineTriage.ts  schema.ts
rayfin-dq-app/src/: App.tsx  index.css  main.tsx
rayfin-dq-app/src/app/: CheckFailureList.tsx  ContractViewer.tsx  DQResultsDashboard.tsx  DatasetPassRate.tsx  QuarantineDatasetList.tsx  QuarantineRowTable.tsx  TriagePanel.tsx
rayfin-dq-app/src/hooks/: useFabricAuth.ts  useFabricClients.ts  useQuarantineState.ts
rayfin-dq-app/src/lib/: rayfin.ts
rayfin-dq-app/src/models/: QuarantineEdit.ts  QuarantineTriage.ts
rayfin-dq-app/src/services/: fabricSqlClient.ts  quarantineService.ts  rayfinClient.ts  resultsService.ts
rayfin-dq-app/src/utils/: rowHash.ts
