[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ouroboros-gx"
version = "0.3.11"
description = "Data contract-driven data quality framework for Microsoft Fabric, powered by Great Expectations Core."
requires-python = ">=3.10"
dependencies = [
    "great-expectations>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock",
]

[tool.setuptools.packages.find]
where = ["src"]
